--- a/index.html
+++ b/index.html
@@ -122,8 +122,18 @@
                             <span class="about__subtitle">OpenClassrooms</span>
                         </div>
                     </div>
-                    <p class="about__description">Développeuse passionnées récemment diplomée, en quête de nouvelles
-                        compétences dans le monde du développement web.</p>
+                    <p class="about__description">Je m'appelle Garance Defrel et je suis intéressée par la
+                        cybersécurité. Après une formation en Développement web, j'ai
+                        acquis des compétences en création de sites web réactifs avec HTML, CSS, JavaScript et React,
+                        ainsi qu'en conception
+                        d'API avec NodeJS, Express et MongoDB.
+                        <br>
+                        Actuellement, je suis à la recherche d'une alternance en
+                        tant qu'analyste
+                        cybersécurité SOC pour explorer ce domaine qui suscite mon intérêt. Motivée et désireuse
+                        d'apprendre, je suis prête à
+                        apporter mon engagement et ma détermination à une entreprise à partir du 1er septembre prochain.
+                    </p>
                     <a href="#contact" class="button">Me contacter</a>
                 </div>
             </div>
@@ -410,7 +420,7 @@
                 <div class="work__card mix seo">
                     <img src="./assets/img/lapanthere.png" class="work__img" alt="">
                     <h3 class="work__title">La Panthère | SEO</h3>
-                    <a href="#" class="work__button">
+                    <a href="https://dgarance.github.io/Projet-4/" class="work__button">
                         Demo <i class="bx bx-right-arrow-alt work__icon"></i>
                     </a>
                     <a href="https://github.com/DGarance/Projet-4" class="work__button"> Code <i
@@ -419,27 +429,18 @@
                 <div class="work__card mix backend">
                     <img src="./assets/img/kanap.png" class="work__img" alt="">
                     <h3 class="work__title">Kanap | Javascript</h3>
-                    <a href="#" class="work__button">
-                        Demo <i class="bx bx-right-arrow-alt work__icon"></i>
-                    </a>
                     <a href="https://github.com/DGarance/Projet-5" class="work__button"> Code <i
                             class="bx bx-code-alt work__icon"></i> </a>
                 </div>
                 <div class="work__card mix backend">
                     <img src="./assets/img/piiquante.png" class="work__img" alt="">
                     <h3 class="work__title">Piiquante | NodeJS/Express/MongoDB</h3>
-                    <a href="#" class="work__button">
-                        Demo <i class="bx bx-right-arrow-alt work__icon"></i>
-                    </a>
                     <a href="https://github.com/DGarance/Projet-6" class="work__button"> Code <i
                             class="bx bx-code-alt work__icon"></i> </a>
                 </div>
                 <div class="work__card mix frontend">
                     <img src="./assets/img/Kasa.png" class="work__img" alt="">
                     <h3 class="work__title">Kasa | React</h3>
-                    <a href="#" class="work__button">
-                        Demo <i class="bx bx-right-arrow-alt work__icon"></i>
-                    </a>
                     <a href="https://github.com/DGarance/Projet-7" class="work__button"> Code <i
                             class="bx bx-code-alt work__icon"></i> </a>
                 </div>
@@ -505,7 +506,6 @@
             <ul class="footer__title">
                 <li><a href="#about" class="footer__link">About</a></li>
                 <li><a href="#about" class="footer__link">Projets</a></li>
-                <li><a href="#about" class="footer__link">Testimonials</a></li>
             </ul>
             <ul class="footer__social">
                 <a href="" class="footer__social-link"><i class="bx bxl-github"></i></a>
